Collapse menu button position fix

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -56,6 +56,12 @@ header .head-body .top-nav {
   flex-wrap: wrap;
 }
 
+.header-buttons {
+  display: flex;
+  align-items: center;
+  gap: 15px;
+}
+
 a.top-nav-li {
   all: unset;
 }
@@ -88,6 +94,7 @@ a.bt-grad {
   color: white;
   border-radius: 5px;
   cursor: pointer;
+  text-decoration: none;
 }
 
 .bt-grad:hover {
@@ -104,7 +111,7 @@ header .head-body .top-nav .top-nav-li {
 }
 
 header .head-body .top-nav .top-nav-li:hover {
-  color: #00f0ff;
+  color: #00F0FF;
 }
 
 header img {
@@ -171,11 +178,11 @@ nav li .item a {
 }
 
 nav li .item:hover a {
-  color: #00f0ff;
+  color: #00F0FF;
 }
 
 nav li .item:hover p {
-  color: #00f0ff;
+  color: #00F0FF;
 }
 
 nav li .child-item {
@@ -201,7 +208,7 @@ nav li .child-item li a {
 }
 
 nav li .child-item li a:hover {
-  color: #00f0ff;
+  color: #00F0FF;
 }
 
 .child-item {
@@ -235,11 +242,11 @@ section {
 }
 
 .active-parent {
-  color: #00f0ff !important;
+  color: #00F0FF !important;
 }
 
 .active-child {
-  color: #00f0ff !important;
+  color: #00F0FF !important;
 }
 
 .text-link {
@@ -278,12 +285,6 @@ section {
   font-size: 20px;
 }
 
-.mobile-collapse-btn {
-  position: absolute;
-  top: 10px;
-  right: 120px;
-}
-
 .mobile-collapse-btn button {
   background: none;
   border: none;
@@ -315,27 +316,28 @@ section {
 
 .mobile-nav-links a {
   text-decoration: none;
-  color: #FFF; 
-  font-size: 18px;
+  font-size: 16px;
+  font-weight: 500;
+  color: #E0E0E0;
   padding: 10px;
   display: block;
+  cursor: pointer;
 }
-.mobile-nav-links a:hover {
-  color: #9F00FF; 
-  background-color: #333; 
-  border-radius: 5px;
+.mobile-nav-links ul li a:hover {
+  color: #00F0FF; 
 }
 
-.d-lg-none {
+.mobile-collapse-btn {
   display: none;
 }
 
-@media (max-width: 992px) {
-  .d-lg-none {
-    display: block;
-  }
+.mobile-collapse-btn button {
+  background: none;
+  border: none;
+  color: #FFF;
+  font-size: 24px;
+  cursor: pointer;
 }
-
 
 .content-table {
   overflow-x: auto;
@@ -508,7 +510,7 @@ tr:last-child td {
 }
 
 .footer-column ul li a:hover {
-  color: #00f0ff; /* Hover color for links */
+  color: #00F0FF; /* Hover color for links */
 }
 
 #anchor {
@@ -554,4 +556,10 @@ tr:last-child td {
 
 .bold-text-color {
   color: #fff;
+}
+
+@media (max-width: 992px) {
+  .mobile-collapse-btn {
+    display: block;
+  }
 }
